--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.20",
     "monaco-editor": "^0.22.3",
     "monaco-themes": "^0.3.3",
+    "qs": "^6.9.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-grid-layout": "^1.2.0",
@@ -53,6 +54,7 @@
   "devDependencies": {
     "@craco/craco": "^6.1.1",
     "@types/lodash": "^4.14.168",
+    "@types/qs": "^6.9.5",
     "@types/react-grid-layout": "^1.1.1",
     "monaco-editor-webpack-plugin": "^3.0.0"
   }
