--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "antd": "^4.13.0",
     "lodash": "^4.17.20",
     "monaco-editor": "^0.22.3",
     "monaco-themes": "^0.3.3",
@@ -23,6 +24,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-grid-layout": "^1.2.0",
+    "react-modal": "^3.12.1",
     "react-scripts": "4.0.2",
     "systemjs": "^6.8.3",
     "typescript": "^4.1.2",
@@ -57,6 +59,7 @@
     "@types/lodash": "^4.14.168",
     "@types/qs": "^6.9.5",
     "@types/react-grid-layout": "^1.1.1",
+    "@types/react-modal": "^3.12.0",
     "monaco-editor-webpack-plugin": "^3.0.0"
   }
 }
