--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@babel/parser": "^7.12.15",
     "@babel/plugin-transform-modules-umd": "^7.12.13",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.12.13",
+    "@babel/standalone": "^7.13.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -55,7 +55,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-react": "^7.12.13",
     "@craco/craco": "^6.1.1",
+    "@types/babel__standalone": "^7.1.3",
     "@types/lodash": "^4.14.168",
     "@types/qs": "^6.9.5",
     "@types/react-grid-layout": "^1.1.1",
